# celestial-service-ipc

./: Cargo.toml  Makefile
.github/workflows/: release.yml  service-integration.yml
resources/: info.plist.tmpl  installer.nsi  launchd.plist.tmpl  systemd_service_unit.tmpl
src/: lib.rs
tests/: test_start_and_parse.rs  test_start_and_stop.rs  test_start_from_start.rs  test_start_permissions.rs
