[package]
name = "celestial_service_ipc"
version = "2.2.0"
edition = "2024"
authors = ["Tunglies"]
license = "GPL-3.0"

[lib]
name = "celestial_service_ipc"
path = "src/lib.rs"

[[bin]]
name = "celestial-service"
path = "src/bin/service.rs"
required-features = ["standalone"]

[[bin]]
name = "celestial-service-install"
path = "src/bin/install_service.rs"
required-features = ["standalone"]

[[bin]]
name = "celestial-service-uninstall"
path = "src/bin/uninstall_service.rs"
required-features = ["standalone"]

[[bin]]
name = "mock_binary"
path = "src/bin/mock_binary.rs"
required-features = ["test"]

[[bin]]
name = "service-integration-driver"
path = "src/bin/service_integration_driver.rs"
required-features = ["client"]

[features]
standalone = [
    "kode-bridge",
    "http",
    "tracing",
    "tracing-subscriber",
    "tokio",
    "anyhow",
    "once_cell",
    "serde_json",
    "clash_verge_logger",
    "flexi_logger",
    "log",
    "response",
    "dep:platform_lib",
    "dep:nix",
    "compact_str",
]
client = [
    "kode-bridge/client",
    "anyhow",
    "log",
    "tokio",
    "once_cell",
    "serde_json",
    "response",
    "compact_str",
]
response = []
test = [
    "flexi_logger",
    "tracing",
    "tracing-subscriber/env-filter",
    "tracing-log",
]
default = []


[dependencies]
kode-bridge = { version = "0.3", features = ["server"], optional = true }
once_cell = { version = "1.21", features = ["parking_lot"], optional = true }
anyhow = { version = "1.0", optional = true }
http = { version = "1.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = false }
serde_json = { version = "1.0", optional = true }
strum = { version = "0.28", optional = false }
strum_macros = { version = "0.28", optional = false }
tokio = { version = "1.47", features = [
    "process",
    "io-util",
    "rt-multi-thread",
    "macros",
    "signal",
    "fs",
], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
clash_verge_logger = { git = "https://github.com/clash-verge-rev/clash-verge-logger.git", version = "0.2.0", optional = true }
flexi_logger = { version = "0.31", optional = true }
log = { version = "0.4.28", optional = true }
tracing-log = { version = "0.2", optional = true }
compact_str = { version = "0.9", features = ["serde"], optional = true }

[target.'cfg(unix)'.dependencies]
platform_lib = { package = "libc", version = "0.2", optional = true }
nix = { version = "0.31", features = ["user"], optional = true }

[target.'cfg(windows)'.dependencies]
platform_lib = { package = "windows-service", version = "0.8", optional = true }

[dev-dependencies]
kode-bridge = { version = "0.3.4", default-features = false, features = [
    "server",
    "client",
] }
serial_test = "3.2"

[profile.release]
panic = "abort"
lto = "thin"
opt-level = 3
codegen-units = 1
